Salesforce CPQ/main/default/objects/ProductAction__c/ProductAction__c.object-meta.xml
<CustomObject>
    <customHelpPage>ProductActionHelp</customHelpPage>
    <description>Action taken when Product Rule fires.</description>
    <label>Product Action</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Product Action #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>