Salesforce CPQ/main/default/objects/ProductAction__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product that is automatically selected on the quote.</description>
    <inlineHelpText>Choose the product to be automatically selected on the quote. Note: The product rule Type must be set to &quot;Selection&quot;.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Actions</relationshipLabel>
    <relationshipName>ProductActions</relationshipName>
    <type>Lookup</type>
</CustomField>