Salesforce CPQ/main/default/objects/ProductAction__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <description>Rule that runs this product action.</description>
    <inlineHelpText>Rule that runs this product action.</inlineHelpText>
    <label>Rule</label>
    <referenceTo>ProductRule__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>