Salesforce CPQ/main/default/objects/ProductAction__c/fields/ValueAttribute__c.field-meta.xml
<CustomField>
    <fullName>ValueAttribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to identify the specific attribute if the Value Field is a global Configuration Attribute field.</description>
    <inlineHelpText>Used to identify the specific attribute if the Value Field is a global Configuration Attribute field.</inlineHelpText>
    <label>Value Attribute</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ValueField__c</field>
            <operation>equals</operation>
            <valueField>ProductAttribute__c.Attribute__r.TargetField__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProductAttribute__c</referenceTo>
    <relationshipLabel>Product Actions</relationshipLabel>
    <relationshipName>ProductActions</relationshipName>
    <type>Lookup</type>
</CustomField>