Salesforce CPQ/main/default/objects/ProductAction__c/fields/ValueField__c.field-meta.xml
<CustomField>
    <fullName>ValueField__c</fullName>
    <description>This field will be used instead of the Filter Value when compared with the Filter Field.</description>
    <inlineHelpText>Compares the Filter Field with this field instead of the Filter Value.</inlineHelpText>
    <label>Value Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>