Salesforce CPQ/main/default/objects/ProductAction__c/validationRules/Value_attr_required_if_global_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_attr_required_if_global_field</fullName>
    <active>true</active>
    <description>Value Attribute required since the Value Field is a global Configuration Attribute field.</description>
    <errorConditionFormula>IF(TEXT(ValueObject__c) == &apos;Configuration Attributes&apos; &amp;&amp; CONTAINS(TEXT(ValueField__c), &apos;.&apos;) &amp;&amp; ValueAttribute__c == &apos;&apos;, true, false)</errorConditionFormula>
    <errorMessage>Value Attribute required since the Value Field is a global Configuration Attribute field.</errorMessage>
</ValidationRule>